--- a/Back/src/main/resources/application.yml
+++ b/Back/src/main/resources/application.yml
@@ -5,14 +5,14 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: hireitbit2022@gmail.com
-    password: rforlblemawlhvra
     properties:
       mail:
         smtp:
           starttls:
-            enabled: true
+            enable: true
           auth: true
+    username: hireitbit2022@gmail.com
+    password: rforlblemawlhvra
   devtools:
     livereload:
       enabled: true
